aarch32-tests/tests/snapshots/mps3-an536-el2/generic-timer-armv8r-none-eabihf.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Found PERIPHBASE 0xf0000000
Creating GIC driver @ 0xf0000000 / 0xf0100000
Calling git.setup(0)
Hcr { tcpac: false, trvm: false, hcd: false, tge: false, tvm: false, tpu: false, tpc: false, tsw: false, tac: false, tidcp: false, tid3: false, tid2: false, tid1: false, tid0: false, twe: false, twi: false, dc: false, bsu: NoEffect, fb: false, va: false, vi: false, vf: false, amo: false, imo: false, fmo: false, swio: false, vm: false }
Configure Timer Interrupt...
Timer Hz = 62500000
Enabling interrupts...
> IRQ
Hyp timer tick!
< IRQ
> IRQ
Hyp timer tick!
< IRQ
> IRQ
Hyp timer tick!
< IRQ
> IRQ
Hyp timer tick!
< IRQ
> IRQ
Hyp timer tick!
< IRQ
> IRQ
Hyp timer tick!
< IRQ
> IRQ
Hyp timer tick!
< IRQ
> IRQ
Hyp timer tick!
< IRQ
> IRQ
Hyp timer tick!
< IRQ
> IRQ
Hyp timer tick!
< IRQ
EL2 timer test completed OK
