aarch32-tests/tests/snapshots/mps3-an536-el2/svc-a32-thumbv8r-none-eabihf.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
x = 1, y = 2, z = 3.000
In hvc_handler, with Hsr { ec: Ok(Svc), il: ThirtyTwoBit, iss: 0000abcd }, Some(Svc(IssCall { imm16: abcd })), Frame { r0: 10000000, r1: 10000001, r2: 10000002, r3: 10000003, r4: 10000004, r5: 10000005 }
In hvc_handler, with Hsr { ec: Ok(Svc), il: ThirtyTwoBit, iss: 00009876 }, Some(Svc(IssCall { imm16: 9876 })), Frame { r0: 20000000, r1: 20000001, r2: 20000002, r3: 20000003, r4: 20000004, r5: 20000005 }
Got 12345678
x = 1, y = 2, z = 3.000
